Update logo design: Replace SVG with simple CS monogram
- Changed from complex SVG to reliable CSS-based logo
- Horizontal layout with CS monogram box + CateredSavings text
- Purple gradient background with white CS letters
- Enhanced gold gradient for 'Savings' text
- Improved browser compatibility and visibility

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,18 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1><a href="#" onclick="resetForm()" class="title-link">Catered Savers</a></h1>
-            <p>50%+ off deals, delivered weekly</p>
+            <div class="logo-container">
+                <div class="logo-icon">
+                    <div class="logo-box">
+                        <span class="logo-letter">C</span>
+                        <span class="logo-letter">S</span>
+                    </div>
+                </div>
+                <div class="logo-text">
+                    <h1><a href="#" onclick="resetForm()" class="title-link">Catered<span class="accent">Savings</span></a></h1>
+                    <p>50%+ off deals, delivered weekly</p>
+                </div>
+            </div>
         </header>
 
         <div class="main-content">
