Implement new professional logo design
- Add envelope + price tag SVG logo matching provided design
- Update branding from 'CateredSavings' to 'CATERED SAVERS'
- Apply consistent logo across main site and admin dashboard
- Use navy blue (#1e3a5f) and orange (#f4a261) color scheme
- Professional, memorable brand identity established

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,23 @@
         <header class="header">
             <div class="logo-container">
                 <div class="logo-icon">
-                    <div class="logo-box">
-                        <span class="logo-letter">C</span>
-                        <span class="logo-letter">S</span>
-                    </div>
+                    <svg width="64" height="64" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <!-- Envelope -->
+                        <path d="M15 25 L85 25 L85 75 L15 75 Z" fill="none" stroke="#1e3a5f" stroke-width="4"/>
+                        <path d="M15 25 L50 50 L85 25" fill="none" stroke="#1e3a5f" stroke-width="4" stroke-linejoin="round"/>
+                        <path d="M15 75 L35 55" stroke="#1e3a5f" stroke-width="4" stroke-linecap="round"/>
+                        <path d="M85 75 L65 55" stroke="#1e3a5f" stroke-width="4" stroke-linecap="round"/>
+                        
+                        <!-- Price Tag -->
+                        <path d="M45 15 L70 15 L75 20 L75 35 L70 40 L45 40 L40 35 L40 20 Z" fill="#f4a261" stroke="#1e3a5f" stroke-width="3"/>
+                        <circle cx="47" cy="22" r="2" fill="#1e3a5f"/>
+                        
+                        <!-- Dollar Sign -->
+                        <text x="60" y="32" font-family="Arial Black, sans-serif" font-size="14" font-weight="900" fill="#1e3a5f" text-anchor="middle">$</text>
+                    </svg>
                 </div>
                 <div class="logo-text">
-                    <h1><a href="#" onclick="resetForm()" class="title-link">Catered<span class="accent">Savings</span></a></h1>
+                    <h1><a href="#" onclick="resetForm()" class="title-link">CATERED<br><span class="accent">SAVERS</span></a></h1>
                     <p>50%+ off deals, delivered weekly</p>
                 </div>
             </div>
