fix: Resolve SSL mixed content issues and add security headers

--- a/public/admin.html
+++ b/public/admin.html
@@ -15,7 +15,7 @@
             <div class="sidebar-header">
                 <div class="admin-logo">
                     <div class="admin-logo-icon">
-                        <svg width="32" height="32" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg width="32" height="32" viewBox="0 0 100 100" fill="none" xmlns="https://www.w3.org/2000/svg">
                             <!-- Envelope -->
                             <path d="M15 25 L85 25 L85 75 L15 75 Z" fill="none" stroke="#1e3a5f" stroke-width="4"/>
                             <path d="M15 25 L50 50 L85 25" fill="none" stroke="#1e3a5f" stroke-width="4" stroke-linejoin="round"/>
