--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <header class="header">
             <div class="logo-container">
                 <div class="logo-icon">
-                    <svg width="64" height="64" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="64" height="64" viewBox="0 0 100 100" fill="none" xmlns="https://www.w3.org/2000/svg">
                         <!-- Envelope -->
                         <path d="M15 25 L85 25 L85 75 L15 75 Z" fill="none" stroke="#1e3a5f" stroke-width="4"/>
                         <path d="M15 25 L50 50 L85 25" fill="none" stroke="#1e3a5f" stroke-width="4" stroke-linejoin="round"/>
