FIX: Add required terms agreement checkbox and ensure only 50%+ off products with accurate pricing

--- a/public/index-modern.html
+++ b/public/index-modern.html
@@ -157,8 +157,8 @@
                     
                     <div class="form-group">
                         <label class="form-label">
-                            <input type="checkbox" name="exclusiveDeals" value="true" style="margin-right: 8px;">
-                            Send me exclusive deals and early access to sales
+                            <input type="checkbox" name="termsAgreement" value="true" required style="margin-right: 8px;">
+                            I agree to Catered Savers <a href="#" style="color: #667eea; text-decoration: underline;">Terms and Conditions</a> by selecting this checkbox
                         </label>
                     </div>
                     
