FEATURE: Add product image scraping system with admin panel integration

--- a/public/admin.html
+++ b/public/admin.html
@@ -422,6 +422,21 @@
                             <div class="step-header">
                                 <span class="step-number">4</span>
                                 <div class="step-info">
+                                    <h4>Update Product Images</h4>
+                                    <p>Scrape real product images from retailer websites to replace placeholders</p>
+                                </div>
+                            </div>
+                            <div class="step-action">
+                                <button class="btn btn-outline" id="update-product-images">
+                                    <i class="fas fa-images"></i> Update Images
+                                </button>
+                            </div>
+                        </div>
+                        
+                        <div class="workflow-step">
+                            <div class="step-header">
+                                <span class="step-number">5</span>
+                                <div class="step-info">
                                     <h4>Update Mailchimp</h4>
                                     <p>Send fresh deal data to Mailchimp and update user tokens (optional step)</p>
                                 </div>
@@ -435,7 +450,7 @@
                         
                         <div class="workflow-step primary-step">
                             <div class="step-header">
-                                <span class="step-number">5</span>
+                                <span class="step-number">6</span>
                                 <div class="step-info">
                                     <h4>Send Weekly Emails</h4>
                                     <p>Complete automation: refresh deals, update Mailchimp, and send to all subscribers</p>
