🔧 Fix deals page token extraction + prepare for production
✅ Fixed token extraction from URL path instead of query params
✅ Updated schema back to PostgreSQL for production deployment
✅ Deals page now properly extracts token from /deals/:token URLs
✅ Ready for Railway production deployment

🎯 Test URL: http://localhost:3000/deals/test-token-12345
🚀 Production will be available at: https://cateredsavers.com/deals/test-token-12345

--- a/public/deals.html
+++ b/public/deals.html
@@ -247,8 +247,9 @@
             }
 
             getTokenFromUrl() {
-                const urlParams = new URLSearchParams(window.location.search);
-                return urlParams.get('token');
+                // Extract token from URL path (e.g., /deals/test-token-12345)
+                const pathParts = window.location.pathname.split('/');
+                return pathParts[pathParts.length - 1];
             }
 
             async init() {
