--- a/public/deals.html
+++ b/public/deals.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Personalized Deals - Catered Savers</title>
-    <link rel="stylesheet" href="styles-modern.css">
+    <link rel="stylesheet" href="styles-modern.css?v=2025-09-11">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
