--- a/public/admin.html
+++ b/public/admin.html
@@ -128,6 +128,10 @@
                     <i class="fas fa-box"></i>
                     <span>Products</span>
                 </li>
+                <li class="nav-item" data-tab="featured-deals">
+                    <i class="fas fa-star"></i>
+                    <span>Featured Deals</span>
+                </li>
                 <li class="nav-item" data-tab="analytics">
                     <i class="fas fa-chart-bar"></i>
                     <span>Analytics</span>
@@ -350,6 +354,46 @@
                             <p>Loading performance...</p>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <!-- Featured Deals Tab -->
+            <div id="featured-deals" class="tab-content">
+                <div class="tab-header">
+                    <h2>Featured Deals Management</h2>
+                    <div class="featured-deals-actions">
+                        <button class="btn btn-primary" id="add-featured-deal-btn">
+                            <i class="fas fa-plus"></i> Add Featured Deal
+                        </button>
+                        <button class="btn btn-secondary" id="refresh-featured-deals-btn">
+                            <i class="fas fa-sync"></i> Refresh
+                        </button>
+                    </div>
+                </div>
+
+                <div class="featured-deals-grid" id="featured-deals-grid">
+                    <!-- Featured deals will be loaded here -->
+                </div>
+
+                <div class="featured-deals-table-container">
+                    <table class="admin-table">
+                        <thead>
+                            <tr>
+                                <th>Order</th>
+                                <th>Image</th>
+                                <th>Title</th>
+                                <th>Retailer</th>
+                                <th>Price</th>
+                                <th>Discount</th>
+                                <th>Status</th>
+                                <th>Clicks</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody id="featured-deals-table-body">
+                            <!-- Featured deals will be loaded here -->
+                        </tbody>
+                    </table>
                 </div>
             </div>
 
