Fix main page loading wrong script file
- Update index-modern.html to load script.js instead of script-modern.js
- This will make the main page load featured deals from API instead of hardcoded products
- Fixes issue where main page showed hardcoded Samsung TV, KitchenAid, etc.

--- a/public/index-modern.html
+++ b/public/index-modern.html
@@ -275,6 +275,6 @@
         </div>
     </footer>
 
-    <script src="script-modern.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
