--- a/public/index-modern.html
+++ b/public/index-modern.html
@@ -275,6 +275,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script-modern.js"></script>
 </body>
 </html>
