Make admin portal fully mobile responsive
- Add comprehensive mobile CSS with responsive breakpoints
- Create mobile menu toggle button with hamburger icon
- Add sidebar overlay for mobile menu backdrop
- Implement mobile menu JavaScript functionality
- Make tables horizontally scrollable on mobile
- Optimize modals for mobile screens (full-screen on small devices)
- Adjust form layouts for mobile (single column)
- Make buttons full-width on mobile
- Add touch-friendly interactions
- Close mobile menu when switching tabs
- Ensure all admin features work on mobile devices

--- a/public/admin.html
+++ b/public/admin.html
@@ -105,8 +105,16 @@
 
     <!-- Admin Dashboard (hidden until login) -->
     <div id="admin-container" class="admin-container" style="display: none;">
+        <!-- Mobile Menu Toggle -->
+        <button class="mobile-menu-toggle" id="mobileMenuToggle">
+            <i class="fas fa-bars"></i>
+        </button>
+        
+        <!-- Sidebar Overlay for Mobile -->
+        <div class="sidebar-overlay" id="sidebarOverlay"></div>
+        
         <!-- Sidebar Navigation -->
-        <nav class="admin-sidebar">
+        <nav class="admin-sidebar" id="adminSidebar">
             <div class="sidebar-header">
                 <div class="admin-logo">
                     <img src="/logo.svg" alt="Catered Savers Logo" width="200" height="80" style="margin: 0; padding: 0;">
