Make personalized deals page fully mobile responsive
- Add comprehensive mobile CSS with responsive breakpoints
- Optimize for tablets (768px), mobile (480px), and small mobile
- Single-column layout for deal cards on mobile
- Touch-friendly button sizing and interactions
- Responsive typography and spacing
- Optimized header and footer for mobile
- Landscape orientation support
- Touch device hover state improvements
- Hide navigation on mobile for cleaner look
- Responsive category tags and loading states

--- a/public/deals.html
+++ b/public/deals.html
@@ -390,6 +390,351 @@
             text-align: center;
             color: #8a9ba8;
         }
+
+        /* Mobile Responsive Styles */
+        @media (max-width: 768px) {
+            .deals-container {
+                padding: 20px 16px;
+            }
+
+            .deals-title {
+                font-size: 2.2rem;
+                margin-bottom: 12px;
+            }
+
+            .deals-subtitle {
+                font-size: 1.1rem;
+                margin-bottom: 16px;
+            }
+
+            .selected-categories {
+                padding: 16px;
+                margin-bottom: 30px;
+            }
+
+            .categories-title {
+                font-size: 1rem;
+                margin-bottom: 12px;
+            }
+
+            .categories-list {
+                gap: 8px;
+            }
+
+            .category-tag {
+                padding: 6px 12px;
+                font-size: 0.8rem;
+            }
+
+            .deals-grid {
+                grid-template-columns: 1fr;
+                gap: 16px;
+                margin-bottom: 40px;
+            }
+
+            .deal-card {
+                border-radius: 12px;
+            }
+
+            .deal-image img {
+                height: 180px;
+            }
+
+            .deal-content {
+                padding: 16px;
+            }
+
+            .deal-title {
+                font-size: 1.1rem;
+                margin-bottom: 8px;
+            }
+
+            .deal-price {
+                margin-bottom: 8px;
+            }
+
+            .deal-original-price {
+                font-size: 0.8rem;
+            }
+
+            .deal-sale-price {
+                font-size: 1.1rem;
+            }
+
+            .deal-description {
+                font-size: 0.85rem;
+                margin-bottom: 12px;
+                -webkit-line-clamp: 2;
+            }
+
+            .deal-discount {
+                font-size: 0.8rem;
+                padding: 3px 8px;
+                margin-bottom: 12px;
+            }
+
+            .deal-cta {
+                padding: 10px 16px;
+                font-size: 0.85rem;
+            }
+
+            /* Header Mobile */
+            .header-content {
+                padding: 0 16px;
+                height: 60px;
+            }
+
+            .logo img {
+                width: 200px;
+                height: 80px;
+                margin-bottom: -5px;
+            }
+
+            .nav {
+                display: none; /* Hide nav on mobile for cleaner look */
+            }
+
+            /* Footer Mobile */
+            .footer {
+                padding: 40px 0 30px;
+                margin-top: 60px;
+            }
+
+            .footer-content {
+                padding: 0 16px;
+            }
+
+            .footer-brand h3 {
+                font-size: 1.3rem;
+            }
+
+            .footer-brand p {
+                font-size: 0.9rem;
+            }
+
+            .footer-links {
+                gap: 20px;
+                margin-bottom: 24px;
+            }
+
+            .footer-links a {
+                font-size: 0.9rem;
+            }
+
+            /* Loading and Error States Mobile */
+            .loading, .error, .no-deals {
+                padding: 60px 16px;
+            }
+
+            .loading i {
+                font-size: 1.5rem;
+            }
+
+            .no-deals i {
+                font-size: 2.5rem;
+            }
+
+            .no-deals h3 {
+                font-size: 1.3rem;
+            }
+
+            .no-deals p {
+                font-size: 1rem;
+            }
+
+            .back-to-home {
+                padding: 10px 20px;
+                font-size: 0.9rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .deals-container {
+                padding: 16px 12px;
+            }
+
+            .deals-title {
+                font-size: 1.8rem;
+                margin-bottom: 10px;
+            }
+
+            .deals-subtitle {
+                font-size: 1rem;
+                margin-bottom: 14px;
+            }
+
+            .selected-categories {
+                padding: 12px;
+                margin-bottom: 24px;
+            }
+
+            .categories-title {
+                font-size: 0.9rem;
+                margin-bottom: 10px;
+            }
+
+            .category-tag {
+                padding: 5px 10px;
+                font-size: 0.75rem;
+            }
+
+            .deals-grid {
+                gap: 12px;
+                margin-bottom: 30px;
+            }
+
+            .deal-image img {
+                height: 160px;
+            }
+
+            .deal-content {
+                padding: 12px;
+            }
+
+            .deal-title {
+                font-size: 1rem;
+                margin-bottom: 6px;
+            }
+
+            .deal-sale-price {
+                font-size: 1rem;
+            }
+
+            .deal-description {
+                font-size: 0.8rem;
+                margin-bottom: 10px;
+            }
+
+            .deal-cta {
+                padding: 8px 12px;
+                font-size: 0.8rem;
+            }
+
+            .header-content {
+                padding: 0 12px;
+                height: 55px;
+            }
+
+            .logo img {
+                width: 150px;
+                height: 60px;
+                margin-bottom: -3px;
+            }
+
+            .footer {
+                padding: 30px 0 20px;
+                margin-top: 40px;
+            }
+
+            .footer-content {
+                padding: 0 12px;
+            }
+
+            .footer-brand h3 {
+                font-size: 1.2rem;
+            }
+
+            .footer-brand p {
+                font-size: 0.85rem;
+            }
+
+            .footer-links {
+                gap: 16px;
+                margin-bottom: 20px;
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .footer-links a {
+                font-size: 0.85rem;
+            }
+
+            .loading, .error, .no-deals {
+                padding: 40px 12px;
+            }
+
+            .loading i {
+                font-size: 1.2rem;
+            }
+
+            .no-deals i {
+                font-size: 2rem;
+            }
+
+            .no-deals h3 {
+                font-size: 1.1rem;
+            }
+
+            .no-deals p {
+                font-size: 0.9rem;
+            }
+
+            .back-to-home {
+                padding: 8px 16px;
+                font-size: 0.85rem;
+            }
+        }
+
+        /* Touch-friendly improvements */
+        @media (hover: none) and (pointer: coarse) {
+            .deal-card:hover {
+                transform: none;
+                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            }
+
+            .deal-card:active {
+                transform: scale(0.98);
+            }
+
+            .deal-cta:hover {
+                transform: none;
+                background: #ff7a59;
+            }
+
+            .deal-cta:active {
+                transform: scale(0.95);
+                background: #e85d3a;
+            }
+
+            .back-to-home:hover {
+                transform: none;
+                background: #ff7a59;
+            }
+
+            .back-to-home:active {
+                transform: scale(0.95);
+                background: #e85d3a;
+            }
+        }
+
+        /* Landscape mobile optimization */
+        @media (max-width: 768px) and (orientation: landscape) {
+            .deals-grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 12px;
+            }
+
+            .deal-image img {
+                height: 140px;
+            }
+
+            .deal-content {
+                padding: 10px;
+            }
+
+            .deal-title {
+                font-size: 0.9rem;
+            }
+
+            .deal-sale-price {
+                font-size: 0.9rem;
+            }
+
+            .deal-description {
+                font-size: 0.75rem;
+                -webkit-line-clamp: 1;
+            }
+        }
     </style>
 </head>
 <body class="deals-page">
