--- a/public/deals.html
+++ b/public/deals.html
@@ -748,7 +748,7 @@
                 <ul class="nav">
                     <li><a href="/#how-it-works">How It Works</a></li>
                     <li><a href="/#categories">Categories</a></li>
-                    <li><a href="/#contact">Contact</a></li>
+                    <li><a href="/contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
