--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
                 <nav class="nav-links">
                     <a href="#how-it-works" class="nav-link">How It Works</a>
                     <a href="#categories" class="nav-link">Categories</a>
-                    <a href="#contact" class="nav-link">Contact</a>
+                    <a href="/contact" class="nav-link">Contact</a>
                 </nav>
             </div>
         </div>
@@ -265,7 +265,7 @@
                 <div class="footer-links">
                     <a href="#" class="footer-link">Privacy Policy</a>
                     <a href="#" class="footer-link">Terms of Service</a>
-                    <a href="#" class="footer-link">Contact Us</a>
+                    <a href="/contact" class="footer-link">Contact Us</a>
                     <a href="#" class="footer-link">Unsubscribe</a>
                 </div>
                 <div class="footer-bottom">
